--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
     padding: 20px 80px;
     box-shadow: 0 5px rgba(0, 0, 0, 0.06);
     background-color: #e3e6f3;
-    border-radius: 20px;
+    border-radius: 40px;
+    
 }
 #navbar{
     display: flex;
@@ -33,4 +34,34 @@
 #navbar li a.active{
     color: green;
 }
+#firstbox{
+    width: 100%;
+    height: 230px;
+    background-color:rgb(106, 106, 255);
+    margin: 0%;
+    padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    
+}
+#searchbar{
+    height: 35px;
+    width: 70%;
+    margin: 20px 10px;
+    text-align: center ;
+    border-radius: 10px;
+
+    
+
+}
+.apple{
+    width: 200px;
+    height: 200px;
+    background-color:#e3e6f3;
+    margin: 25px 0 30px 0;
+    padding: 10px;
+    text-align: center;
+   
+}
+
 
