--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 80px;
+    padding: 20px 70px;
     box-shadow: 0 5px rgba(0, 0, 0, 0.06);
     background-color: #e3e6f3;
     border-radius: 40px;
@@ -35,10 +35,10 @@
     color: green;
 }
 #firstbox{
-    width: 100%;
-    height: 230px;
+    width: 99%;
+    height: 250px;
     background-color:rgb(106, 106, 255);
-    margin: 0%;
+    margin-left: 0%;
     padding-top: 20px;
     padding-left: 10px;
     padding-right: 10px;
@@ -47,21 +47,194 @@
 #searchbar{
     height: 35px;
     width: 70%;
-    margin: 20px 10px;
+    margin: 10px 10px;
     text-align: center ;
     border-radius: 10px;
+    display: inline-block;
 
     
 
 }
 .apple{
     width: 200px;
-    height: 200px;
-    background-color:#e3e6f3;
-    margin: 25px 0 30px 0;
+    height: 300px;
+    background-color:white;
+    
     padding: 10px;
     text-align: center;
+    display: inline-block;
+    margin: 20px;
+    border-radius: 10px;
+    
+    
    
 }
-
-
+#vegsection{
+   
+    text-decoration:none;
+    padding-bottom: 3px;
+    padding-left: 30px;
+    margin-left: 20px;
+    display: inline;
+    justify-content: space-between;
+    
+}
+.lolo{
+    display: inline;
+    justify-content: space-between;
+    padding-right: 20px;
+    color:black;
+}
+.grapes{
+    width: 200px;
+    height: 300px;
+    background-color:white;
+    
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    margin: 20px;
+    border-radius: 10px;
+}
+.pineapple{
+    width: 200px;
+    height: 300px;
+    background-color:white;
+    
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    margin: 20px;
+    border-radius: 10px;
+}
+.orange{
+    width: 200px;
+    height: 300px;
+    background-color:white;
+    
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    margin: 20px;
+    border-radius: 10px;
+}
+.strawberry{
+    width: 200px;
+    height: 300px;
+    background-color:white;
+    
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    margin: 20px;
+    border-radius: 10px;
+}
+.drogan{
+    width: 200px;
+    height: 300px;
+    background-color:white;
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    margin: 20px;
+}
+.wattermelon{
+    width: 200px;
+    height: 300px;
+    background-color:white;
+    
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    margin: 20px;
+    border-radius: 10px;
+}
+.goava{
+    width: 200px;
+    height: 300px;
+    background-color:white;
+    
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    margin: 20px;
+    border-radius: 10px;
+}
+.pears{
+    width: 200px;
+    height: 300px;
+    background-color:white;
+    
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    margin: 20px;
+    border-radius: 10px;
+}
+.banana{
+    width: 200px;
+    height: 300px;
+    background-color:white;
+    
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    margin: 20px;
+    border-radius: 10px;
+}
+.cherry{
+    width: 200px;
+    height: 300px;
+    background-color:white;
+    
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    margin: 20px;
+    border-radius: 10px;
+}
+.coconut{
+    width: 200px;
+    height: 300px;
+    background-color:white;
+    
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    margin: 20px;
+    border-radius: 10px;
+}
+.rambutan{
+    width: 200px;
+    height: 300px;
+    background-color:white;
+    
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    margin: 20px;
+    border-radius: 10px;
+}
+.tomato{
+    width: 200px;
+    height: 300px;
+    background-color:white;
+    
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    margin: 20px;
+    border-radius: 10px;
+}
+.amla{
+    width: 200px;
+    height: 300px;
+    background-color:white;
+    
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    margin: 20px;
+    border-radius: 10px;
+}
